--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,11 +12,38 @@ h1 {
 }
 
 .jumbotron {
-    background-image: url("../images/buddy.jpeg");
-    background-position: right center;
+    background-image: url("../images/background.png");
+    background-position: center;
     height: 100vh;
 }
 
+
+@media only screen and (max-width: 1300px) {
+.jumbotron {
+    background-image: url("../images/background-smaller.png");
+    background-position: center;
+    height: 100vh;
+}
+}
+
+@media only screen and (max-width: 860px) {
+.jumbotron {
+    background-image: url("../images/background-smallest.png");
+    background-position: center;
+    background-repeat: no-repeat;
+    height: 700px;
+}
+}
+
+
+@media only screen and (max-width: 560px) {
+.jumbotron {
+    background-image: url("../images/background-mobile.png");
+    background-position: center;
+    background-repeat: no-repeat;
+    height: 481px;
+}
+}
 a.nav-item.nav-link.active {
     text-align: center;
 }
@@ -43,9 +70,16 @@ a.navbar-brand {
 }
 
 .arrow{
-    padding-top: 40px;
-    font-size: 90px;
-    text-align: center;
+ display: block;
+ max-width: 75px;
+ margin-left: auto;
+ margin-right: auto;
+ vertical-align: bottom;
+}
+
+.arrow-container{
+    display: block;
+    margin-top: 75vh;
 }
 
 .main-logo{
