--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 body {
     width: 100%;
-    background: url("../images/background.jpeg") no-repeat bottom right fixed;
+    background: url("https://source.unsplash.com/1920x1080/?food") no-repeat bottom right fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover; 
