--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,7 +18,7 @@ h1 {
 }
 
 
-@media only screen and (max-width: 1300px) {
+@media screen and (max-width: 1300px) {
 .jumbotron {
     background-image: url("../images/background-smaller.png");
     background-position: center;
@@ -26,7 +26,7 @@ h1 {
 }
 }
 
-@media only screen and (max-width: 860px) {
+@media screen and (max-width: 860px) {
 .jumbotron {
     background-image: url("../images/background-smallest.png");
     background-position: center;
@@ -36,7 +36,7 @@ h1 {
 }
 
 
-@media only screen and (max-width: 560px) {
+@media screen and (max-width: 560px) {
 .jumbotron {
     background-image: url("../images/background-mobile.png");
     background-position: center;
