Add smooth scrolling to anchor points

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,6 +5,7 @@ body {
     -moz-background-size: cover;
     -o-background-size: cover; 
     background-size: cover;
+    overflow: visible;
 }
 
 h1 {
