--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,7 @@ body {
     -o-background-size: cover; 
     background-size: cover;
     overflow: visible;
+    font-family: 'Montserrat', sans-serif;
 }
 
 h1 {
